@@ -70,7 +70,7 @@ void sp_file_new (void)
 	SPDocument * doc;
 	SPViewWidget *dtw;
 
-	doc = sp_document_new (NULL, TRUE, TRUE);
+	doc = sodipodi_document_new (NULL, TRUE, TRUE);
 	g_return_if_fail (doc != NULL);
 
 	dtw = sp_desktop_widget_new (sp_document_namedview (doc, NULL));
